--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>YouTube Search</title>
 </head>
 <body>
-    <h2>Search YouTube Without Homepage</h2>
+    <h2>Search on YouTube Without Homepage</h2>
     <form action="https://www.youtube.com/results" method="GET" target="_blank">
         <input type="text" name="search_query" placeholder="Search YouTube..." required>
         <button type="submit">Search</button>
